--- a/frontEnd/src/index.css
+++ b/frontEnd/src/index.css
@@ -9,3 +9,95 @@ body {
   background-color: lightblue;
   margin: 0;
 }
+
+.container {
+  padding: 2%;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#dateContainer {
+  padding: 2%;
+  height: 50%;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;  
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  width: 100%;
+  padding: 2%;
+  background-color: white;
+  border-radius: 20px;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  width: 50vw;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  padding: 2%;
+}
+
+.outerButtonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2%;
+}
+
+.liContainer {
+  padding: 2px;
+}
+
+#reserveButton {
+  border-radius: 5px;
+  background-color: lightblue;
+  color: black;
+}
+
+.vehicleListingImage {
+  height: 15vh;
+  width: 15vw;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: lightblue;
+}
